Доработал сервис ростера пока без деплоя в докер
