# RosterService/Swagger/go/model_roster_insert.go
@@ -1,18 +1,0 @@
-/*
- * Roster Servise API
- *
- * This is TEST API for my service
- *
- * API version: 0.0.1
- * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
- */
-package swagger
-
-type RosterInsert struct {
-	// NAME roster
-	Name string `json:"name"`
-	// ID user
-	IdUser string `json:"idUser"`
-
-	Units []Unit `json:"units"`
-}
