# RosterService/pkg/Roster/model/RosterDetailedInfo.go
@@ -1,5 +1,14 @@
 package model
 
+import "errors"
+
+var ErrorRosterCost = errors.New("error roster cost!")
+var ErrorCountEquipmernOnUnit = errors.New("error count equipment on unit!")
+var ErrorCountEquipmernOnRoster = errors.New("error count equipment on roster!")
+var ErrorUnitRole = errors.New("error unit role in rostern!")
+
+var MAX_COST_ROSTER = 12
+
 type UnitDetailedInfo struct {
 	Id string
 	Name string
@@ -43,4 +52,109 @@ type RosterDetailedInfo struct {
 	Name string
 	IdUser string
 	Units []RosterUnitDetailedInfo
+}
+
+
+func (r *RosterDetailedInfo) costRosterValid() error {
+	costRoster := int32(0)
+	for i := 0; i < len(r.Units); i++ {
+		unit := r.Units[i]
+		for j := 0; j < len(unit.EquipmentsInfo); j++ {
+			costRoster += unit.EquipmentsInfo[j].Cost
+		}
+	}
+
+	if costRoster > int32(MAX_COST_ROSTER) {
+		return ErrorRosterCost
+	}
+
+	return nil
+}
+
+func (r *RosterDetailedInfo) countEquipmentOnUnitRosterValid() error {
+	for i := 0; i < len(r.Units); i++ {
+		unit := r.Units[i]
+		unitEqipmentCount := make(map[string]int32)
+		for j := 0; j < len(unit.EquipmentsInfo); j++ {
+			eqipment := unit.EquipmentsInfo[j]
+			if eqipment.LimitOnUnit != -1 {
+				_, equipmentExistInMap := unitEqipmentCount[eqipment.Id]
+				if equipmentExistInMap {
+					unitEqipmentCount[eqipment.Id] -= 1
+					if unitEqipmentCount[eqipment.Id] < 0 {
+						return ErrorCountEquipmernOnUnit
+					}
+				} else {
+					unitEqipmentCount[eqipment.Id] = eqipment.LimitOnUnit - 1
+				}
+			}
+		}
+	}
+
+	return nil
+}
+
+func (r *RosterDetailedInfo) countEquipmentOnRosterValid() error {
+	rosterEqipmentCount := make(map[string]int32)
+	for i := 0; i < len(r.Units); i++ {
+		unit := r.Units[i]
+		for j := 0; j < len(unit.EquipmentsInfo); j++ {
+			equipment := unit.EquipmentsInfo[j]
+			if equipment.LimitOnTeam != -1 {
+				_, equipmentExistInMap := rosterEqipmentCount[equipment.Id]
+				if equipmentExistInMap {
+					rosterEqipmentCount[equipment.Id] -= 1
+					if rosterEqipmentCount[equipment.Id] < 0 {
+						return ErrorCountEquipmernOnRoster
+					}
+				} else {
+					rosterEqipmentCount[equipment.Id] = equipment.LimitOnTeam - 1
+				}
+			}
+		}
+	}
+	return nil
+}
+
+func (r *RosterDetailedInfo) unitRolesInRosterValid() error {
+	for i := 0; i < len(r.Units); i++ {
+		unit := r.Units[i]
+		unitRole := ""
+		for j := 0; j < len(unit.EquipmentsInfo); j++ {
+			equipment := unit.EquipmentsInfo[j]
+			if equipment.SoldarRole != "" {
+				if unitRole == "" {
+					unitRole = equipment.SoldarRole
+				} else {
+					return ErrorUnitRole
+				}
+			}
+		}
+	}
+	return nil
+}
+
+func (r *RosterDetailedInfo) IsRosterValid() error {
+
+	err := r.costRosterValid()
+	if err != nil {
+		return err
+	}
+
+	err = r.countEquipmentOnUnitRosterValid()
+	if err != nil {
+		return err
+	}
+
+	err = r.countEquipmentOnRosterValid()
+	if err != nil {
+		return err
+	}
+
+	err = r.unitRolesInRosterValid()
+	if err != nil {
+		return err
+	}
+
+	return nil
 }
